--- a/public/index.html
+++ b/public/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link href="<link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Text:wght@100&family=Roboto:ital,wght@1,300&family=Space+Mono&family=Vast+Shadow&display=swap" rel="stylesheet">"
-    <title>React Portfolio Website</title>
-    <style>
-      * {
-        font-family: 'Roboto', sans-serif;
-        margin: 0;
-      }
-    </style>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <meta name="description" content="Web site created using create-react-app" />
+  <link href="<link rel=" preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Text:wght@100&family=Roboto:ital,wght@1,300&family=Space+Mono&family=Vast+Shadow&display=swap"
+    rel="stylesheet">"
+  <title>React Portfolio Website</title>
+  <style>
+    * {
+      font-family: 'Roboto', sans-serif;
+      margin: 0;
+    }
+  </style>
+
+  <p>Hey - this is a change</p>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+
+</body>
+
 </html>
