--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <meta name="description" content="Web site created using create-react-app" />
-  <link href="https://fonts.googleapis.com" rel="stylesheet">
-  <link href="https://fonts.gstatic.com" rel="stylesheet">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Text:wght@100&family=Roboto:ital,wght@1,300&family=Space+Mono&family=Vast+Shadow&display=swap"
-    rel="stylesheet">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
   <title>React Portfolio Website</title>
   <style>
     * {
-      font-family: 'Roboto', sans-serif;
+      font-family: 'Space Mono', monospace;
       margin: 0;
       overflow-x: hidden;
     }
