updating title and adding favicon

--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,15 @@
 
 <head>
   <meta charset="utf-8" />
-
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
   <meta name="description" content="Web site created using create-react-app" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
-  <title>React Portfolio Website</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
+  
+  <title>shelby</title>
+  <link rel="icon" href="assets/favicon.ico">
   <style>
     * {
       font-family: 'Space Mono', monospace;
