--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
   
   <title>shelby</title>
-  <link rel="icon" href="assets/favicon.ico">
+  <link rel="icon" href="favicon.ico">
   <style>
     * {
       font-family: 'Space Mono', monospace;
